tambahan untuk tanggungan orang tua

--- a/templates/app/result.html
+++ b/templates/app/result.html
@@ -81,6 +81,10 @@
                         <th>Pajak PBB</th>
                         <td>{{ pbb }}</td>
                     </tr>
+                    <tr>
+                        <th>Jumlah tanggungan</th>
+                        <td>{{ tanggungan }}</td>
+                    </tr>
                 </table>
             </div>
         </div>
