--- a/templates/app/ukt-analyzer.html
+++ b/templates/app/ukt-analyzer.html
@@ -28,6 +28,8 @@
 
             {% include "app/questions/q9.html" %}
 
+            {% include "app/questions/q10.html" %}
+
             {% include "app/questions/bio.html" %}
 
         </form>
